# standards

./: .gitattributes  .gitignore  .shellcheckrc  AGENTS.md  README.md  coding-standards-review.html  lychee.toml  mise-optimization-report.html  package.json  prettier.config.mjs  standards.manifest.toml  typos.toml
.config/mise/: config.toml
.config/mise/conf.d/: 20-markdown.toml  20-shell.toml
C/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  c-build.sh  c-quality.sh  mingw-w64.cmake
C#/: .editorconfig  Directory.Build.props  README.md
C++/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  README.md  cpp-build.sh  cpp-quality.sh
C++/src/: library.cpp
C/include/project/: library.h
C/src/: main.c
Dagger/: README.md
Dagger/dagger/src/: index.ts
Elixir/: .credo.exs  .formatter.exs  README.md  mix.exs
Fortran/: .fortls  README.md  fpm.toml
Fortran/scripts/: check-fpm-manifest.py
GDScript/: .editorconfig  .gdlintrc  README.md  project.godot
GDScript/tests/: gdscript_load_check.gd.uid  run_tests.gd
Go/: .golangci.yml  README.md
Go/boringlint/: boringlint_test.go  genericmethod_go127_test.go
Haskell/: .hlint.yaml  LICENSE  README.md  project-name.cabal
Haskell/bench/: Main.hs
Haskell/src/: ProjectName.hs
Kotlin/: .editorconfig  README.md  build.gradle.kts  detekt.yml  gradle.properties
Lua/: .luacheckrc  .luarc.json  README.md
Markdown/: .markdownlint-cli2.jsonc  .prettierignore  README.md  lychee.toml
Markdown/docs/: example.md
Markdown/scripts/: check-mdx.mjs
Mise/: README.md  config.toml
Mise/conf.d/: 10-dagger.toml  20-c.toml  20-cpp.toml  20-csharp.toml  20-elixir.toml  20-fortran.toml  20-go.toml  20-haskell.toml  20-kotlin.toml  20-lua.toml  20-odin.toml  20-php.toml  20-python.toml  20-roc.toml  20-rust.toml  20-shell.toml  20-spark.toml  20-ts.toml  20-zig.toml
Odin/: .editorconfig  README.md  odinfmt.json
Odin/tests/: project_name_test.odin
PHP/: README.md  composer.json  deptrac.yaml  infection.json5  phpbench.json  phpmd.xml  phpunit.xml  rector.php
Python/: README.md  pyproject.toml
Roc/: README.md  main.roc
Rust/: Cargo.toml  README.md  clippy.toml  deny.toml  rustfmt.toml
SPARK/: README.md  project_name.gpr
Shell/: .editorconfig  README.md
Shell/scripts/: project-name.sh  shell-standards.sh
Shell/tests/: project-name.bats
TS/: README.md  biome.jsonc  eslint.config.mjs  package.docs.jsonc  package.json  prettier.config.mjs  tsconfig.json
TS/tests/: math.test.ts
Zig/: README.md  build.zig  build.zig.zon
Zig/src/: root.zig
docs/research/: gdscript-standards.md  odin.md  roc.md
extras/workstation/: macbook-setup.sh  wsl-setup.sh
fable/: Fable's review.html  review-prompt.md
fortran/: ford.md
fortran/src/: project_name.f90
fortran/test/: main.f90
scripts/: check-mdx.mjs  check-standards-drift.py  shell-standards.sh
shared/: .gitattributes  .gitignore  AGENTS.md  wsl-setup.sh
testers/: README.md
testers/c/: .clang-tidy  CMakeLists.txt  CMakePresets.json  c-build.sh  c-quality.sh  dagger.json
testers/c/.config/mise/: config.toml
testers/c/.config/mise/conf.d/: 20-c.toml
testers/c/dagger/: package.json  tsconfig.json
testers/c/dagger/src/: index.ts
testers/c/include/project/: library.h
testers/c/src/: library.c  main.c
testers/c/tests/: project_tests.c
testers/cpp/: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  cpp-build.sh  cpp-quality.sh
testers/cpp/.config/mise/: config.toml
testers/cpp/.config/mise/conf.d/: 20-cpp.toml
testers/cpp/include/project/: library.h
testers/cpp/tests/: project_tests.cpp
testers/csharp/: .editorconfig  Calculator.cs  CalculatorTests.cs  Directory.Build.props  Directory.Packages.props  StandardsCsharpTester.csproj  packages.lock.json
testers/elixir/: .credo.exs  .formatter.exs  mix.exs
testers/elixir/lib/: standards_elixir_tester.ex
testers/elixir/test/: standards_elixir_tester_test.exs
testers/fortran/: fpm.toml
testers/fortran/app/: main.f90
testers/fortran/test/: test_project_name.f90
testers/gdscript/src/: counter.gd  counter.gd.uid
testers/gdscript/tests/: gdscript_load_check.gd  run_tests.gd.uid
testers/go/: .golangci.yml  go.mod
testers/go/boringlint/: boringlint.go  go.mod
testers/haskell/: .hlint.yaml  LICENSE  cabal.project  standards-haskell-tester.cabal
testers/haskell/.config/mise/: config.toml
testers/haskell/.config/mise/conf.d/: 20-haskell.toml
testers/haskell/app/: Main.hs
testers/haskell/bench/: Main.hs
testers/haskell/src/: ProjectName.hs  StandardsHaskellTester.hs
testers/haskell/test/: Main.hs
testers/kotlin/: .editorconfig  build.gradle.kts  detekt.yml  gradle.lockfile  gradle.properties  settings.gradle.kts
testers/kotlin/gradle/: verification-metadata.xml
testers/lua/: .gitleaks.toml  .luacheckrc  dagger.json
testers/lua/spec/: greeting_spec.lua
testers/lua/src/: greeting.lua
testers/lua/tests/: greeting_spec.lua
testers/markdown/: .markdownlint-cli2.jsonc  lychee.toml  package.json  typos.toml
testers/php/: composer.json  dagger.json  phpcs.xml  phpmd.xml  psalm.xml
testers/python/: .gitignore  .gitleaks.toml  README.md  dagger.json  pyproject.toml
testers/python/.config/mise/: config.toml
testers/python/.config/mise/conf.d/: 10-dagger.toml  20-python.toml
testers/python/dagger/: package.json  tsconfig.json
testers/python/dagger/src/: index.ts
testers/python/src/project_name/: __init__.py
testers/python/src/standards_python_tester/: __init__.py  greeter.py
testers/python/tests/: test_greeter.py
testers/roc/: Project.roc
testers/rust/: Cargo.toml  deny.toml  rustfmt.toml
testers/rust/.config/mise/: config.toml
testers/rust/.config/mise/conf.d/: 20-rust.toml
testers/rust/src/: lib.rs
testers/rust/tests/: double.rs
testers/shell/: .shellcheckrc
testers/spark/: README.md  alire.toml  project_name_tests.gpr
testers/ts/: .gitleaks.toml  biome.jsonc  dagger.json  eslint.config.mjs  package.json  tsconfig.json
testers/zig/: README.md  build.zig  build.zig.zon
(+54 files in other folders)
